glx: Use glapi sources from the mesa tree
With recent mesa HEAD, the glapi sources used only in the xserver glx
module are carried in the mesa tree. Previously, these were generated
separately and committed to the xserver tree.

The build is changed to symlink these files like the other mesa sources.
This reduces the chance for mismatches between mesa's glX API and the
xserver's glX API.

--- a/GL/glx/.gitignore
+++ b/GL/glx/.gitignore
@@ -1,5 +1,13 @@
-indirect_size.h
+glapi.c
 glcontextmodes.c
 glcontextmodes.h
-glapi.c
 glthread.c
+indirect_dispatch.c
+indirect_dispatch.h
+indirect_dispatch_swap.c
+indirect_reqsize.c
+indirect_reqsize.h
+indirect_size.h
+indirect_size_get.c
+indirect_size_get.h
+indirect_table.c
