--- a/GL/glx/Makefile.am
+++ b/GL/glx/Makefile.am
@@ -33,7 +33,15 @@ nodist_libglx_la_SOURCES = indirect_size.h \
 			   glapi.c \
 			   glcontextmodes.c \
 			   glcontextmode.h \
-			   glthread.c
+			   glthread.c \
+			   indirect_dispatch.c \
+			   indirect_dispatch.h \
+			   indirect_dispatch_swap.c \
+			   indirect_reqsize.c \
+			   indirect_reqsize.h \
+			   indirect_size_get.c \
+			   indirect_size_get.h \
+			   indirect_table.c
 
 libglxdri_la_SOURCES = \
         glxdri.c \
@@ -56,15 +64,7 @@ libglx_la_SOURCES = \
         glxserver.h \
         glxutil.c \
         glxutil.h \
-        indirect_dispatch.c \
-        indirect_dispatch.h \
-        indirect_dispatch_swap.c \
         indirect_program.c \
-        indirect_reqsize.c \
-        indirect_reqsize.h \
-        indirect_size_get.c \
-        indirect_size_get.h \
-        indirect_table.c \
         indirect_table.h \
         indirect_texture_compression.c \
         indirect_util.c \
