Fixed unescaped newline in EXTRA_DIST (cherry picked from commit 567c172c4d400fdfe69e7b096a3877fce5c2de9f)

--- a/hw/xquartz/bundle/Makefile.am
+++ b/hw/xquartz/bundle/Makefile.am
@@ -18,7 +18,7 @@ EXTRA_DIST = \
 	Info.plist \
 	X11.icns \
 	bundle-main.c \
-	X11.xcodeproj/project.pbxproj
+	X11.xcodeproj/project.pbxproj \
 	Dutch.lproj/InfoPlist.strings \
 	Dutch.lproj/Localizable.strings \
 	Dutch.lproj/main.nib/keyedobjects.nib \
