Added Xquartz.plist to EXTRA_DIST (cherry picked from commit 70f9495e0c1f1459507064b673fe57b1c90d3c2c)

--- a/hw/xquartz/bundle/Makefile.am
+++ b/hw/xquartz/bundle/Makefile.am
@@ -15,6 +15,7 @@ resourcedir=$(libdir)/X11/xserver
 resource_DATA = Xquartz.plist
 
 EXTRA_DIST = \
+	$(resource_DATA) \
 	Info.plist \
 	X11.icns \
 	bundle-main.c \
