--- a/GL/apple/Makefile.am
+++ b/GL/apple/Makefile.am
@@ -11,10 +11,10 @@ AM_CPPFLAGS = \
 if HAVE_AGL_FRAMEWORK
 noinst_LIBRARIES = libAGLcore.a 
 libAGLcore_a_SOURCES = aglGlx.c \
-		       $(top_srcdir)/hw/darwin/quartz/xpr/x-list.c \
-		       $(top_srcdir)/hw/darwin/quartz/xpr/x-list.h \
-		       $(top_srcdir)/hw/darwin/quartz/xpr/x-hash.c \
-		       $(top_srcdir)/hw/darwin/quartz/xpr/x-hash.h \
+		       $(top_srcdir)/hw/xquartz/xpr/x-list.c \
+		       $(top_srcdir)/hw/xquartz/xpr/x-list.h \
+		       $(top_srcdir)/hw/xquartz/xpr/x-hash.c \
+		       $(top_srcdir)/hw/xquartz/xpr/x-hash.h \
 		       $(top_srcdir)/hw/dmx/glxProxy/compsize.c
 endif
 
