Fix composite on !darwin
2ffdb0eb641ab6949783b4eb574f77e7486ac929 changes the default value of
COMPOSITE to 'auto', but doesn't set it back to 'yes' as appropriate.

--- a/configure.ac
+++ b/configure.ac
@@ -789,6 +789,9 @@ if test "x$COMPOSITE" = xauto; then
 		darwin*)
 			[ "x$XQUARTZ" = xyes -o "x$XQUARTZ" = xauto ] && COMPOSITE=no
 			;;
+		*)
+			COMPOSITE=yes
+			;;
 	esac
 fi
 
