XQuartz: Added framework for asserting which thread we're in. (cherry picked from commit 00beb982510e7a82d77e1f1d43e77c84d7bf74c2)

--- a/hw/xquartz/Makefile.am
+++ b/hw/xquartz/Makefile.am
@@ -34,7 +34,8 @@ libXquartz_la_SOURCES = \
 	quartzForeground.c \
 	quartzKeyboard.c \
 	quartzPasteboard.c \
-	quartzStartup.c
+	quartzStartup.c \
+	threadSafety.c
 
 EXTRA_DIST = \
 	X11Application.h \
@@ -50,4 +51,5 @@ EXTRA_DIST = \
 	quartzCommon.h \
 	quartzForeground.h \
 	quartzKeyboard.h \
-	quartzPasteboard.h
+	quartzPasteboard.h \
+	threadSafety.h
