XQuartz: Cleanup turning off COMPOSITE (cherry picked from commit 8f920fca6f9149185649d52569d33bf81b6c6857)

--- a/configure.ac
+++ b/configure.ac
@@ -782,7 +782,7 @@ dnl XQuartz DDX Detection... Yes, it's ugly to have it here... but we need to di
 if test "x$COMPOSITE" = xauto; then
 	case $host_os in
 		darwin*)
-			[ "x$XQUARTZ" = xyes -o "x$XQUARTZ" = xauto ] && COMPOSITE=no
+			test "x$XQUARTZ" = xyes -o "x$XQUARTZ" = xauto && COMPOSITE=no
 			;;
 		*)
 			COMPOSITE=yes
